# androidapp

./: README.md
Myapp1/app/: build.gradle
Myapp1/app/src/androidTest/java/com/roger/myapp1/: ExampleInstrumentedTest.java
Myapp1/app/src/main/: AndroidManifest.xml
Myapp1/app/src/main/java/com/roger/myapp1/: DisplayMessageActivity.java  MainActivity.java
Myapp1/app/src/main/res/layout/: activity_main.xml
Myapp1/app/src/main/res/values/: strings.xml
Myapp1/gradle/wrapper/: gradle-wrapper.properties
camview2/app/: build.gradle
camview2/app/src/main/: AndroidManifest.xml
camview2/app/src/main/res/menu/: menu_main.xml
camview2/app/src/main/res/values/: strings.xml
camview2new/app/: build.gradle
camview2new/app/src/main/: AndroidManifest.xml
camview2new/app/src/main/res/layout/: activity_camera.xml  content_main.xml  fragment_camera2_basic.xml
camview2new/app/src/main/res/values/: strings.xml
camview2new/gradle/wrapper/: gradle-wrapper.properties
jnitest/app/: CMakeLists.txt  build.gradle
jnitest/app/src/androidTest/java/com/roger/facejni/: ExampleInstrumentedTest.java
jnitest/app/src/main/: AndroidManifest.xml
jnitest/app/src/main/java/com/roger/facejni/: FaceAction.java  MainActivity.java
jnitest/app/src/main/jni/: FaceAction.cpp  FaceAction.h  FaceAction_jni.cpp
jnitest/app/src/main/res/layout/: activity_main.xml
jnitest/app/src/main/res/values/: strings.xml
jnitest/app/src/test/java/com/roger/facejni/: ExampleUnitTest.java
jnitest/gradle/wrapper/: gradle-wrapper.properties
(+8 files in other folders)
